--- a/vacation-frontend/package.json
+++ b/vacation-frontend/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
+    "eslint": "^9.39.2",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
